--- a/spa-loading-template.html
+++ b/spa-loading-template.html
@@ -5,7 +5,7 @@
 <body>
 	<style>
 		.loading {
-			background-color: #c1c0c1;
+			background-color: #E3CBA6;
 			position: fixed;
 			top: 0;
 			left: 0;
@@ -23,11 +23,11 @@
 		}
 
 		#spinner #sGD stop {
-			stop-color: #121212;
+			stop-color: #3E3C3E;
 		}
 
 		#spinner .path-solid {
-			stroke: #49484a;
+			stroke: #E3CBA6;
 		}
 	</style>
 	<div class="loading">
